# openPanthera

./: MANIFEST.in  README.md  directory.py  display.py  mariadb.py  menu.py  panthera.py  pyproject.toml  setup.py
.github/workflows/: mariadb.yml  ubuntu-latest.yml
src/: cli.py  commander.py  containers.py  directory.py  display.py  mariadb.py  mariadblib.py  menu.py  migrate.py  modules.py  schema.py
src/doc/: code_style.md
src/openPanthera/: axp_table.py  cli.py  cli_menu.py  commander.py  containers.py  directory.py  display.py  fail.py  hint.py  lib.py  mariadblib.py  menu.py  migrate.py  modules.py  schema.py  table.py
test/: mariadb.conf.json  test.py
test/panthera/10-table/: 10-clients.mysql  10-currencies.mysql  10-order_items.mysql  10-orders.mysql  10-prices.mysql  10-products.mysql  10-transactions.mysql
test/panthera/xx-destroy/: 10-clients.mysql  10-currencies.mysql  10-order_items.mysql  10-orders.mysql  10-prices.mysql
test2/: schemas.json
tools/github_test/: mariadb.conf.json  test.py
